@@ -44,6 +44,8 @@
 	Increase line length limit used during formatting output of :highlight
 	command to allow longer strings.
 
+	Display number of color pairs in use to :version/:vifm menu.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
